# db-inspector

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
inspector/: __main__.py  app.py  config.py  main.py
inspector/db/: __init__.py  connection.py  database.py  metadata.py  query.py
inspector/tui/screens/: __init__.py  query_runner.py  schema_browser.py  table_view.py
inspector/tui/widgets/: table_helpers.py
scripts/: entrypoint.sh
tests/: conftest.py  test_config.py  test_db_connection.py  test_db_metadata.py  test_db_query.py
