[project]
name = "pg-inspector"
version = "0.1.0"
description = "PostgreSQL CLI visual inspector with TUI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "textual>=0.47.0",
    "typer>=0.12.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[project.scripts]
inspector = "inspector.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inspector"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
